# deps-be-message-flow

./: .gitattributes  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg
message_flow/commands/common/: __init__.py  command.py  command_message_headers.py  command_reply_outcome.py  command_util.py  failure.py  outcome.py  reply_message_headers.py  success.py
message_flow/commands/consumer/: __init__.py  command_dispatcher.py  command_handler.py  command_handler_params.py  command_handler_reply_builder.py  command_handlers.py  command_handlers_builder.py  command_message.py  command_with_destination.py  command_with_destination_builder.py
message_flow/commands/producer/: __init__.py  command_producer.py
message_flow/events/common/: __init__.py  domain_event.py  event_message_headers.py  event_util.py
message_flow/events/exceptions/: __init__.py  common.py  mappers.py
message_flow/events/mappers/: __init__.py  interfaces.py  json_mapper.py
message_flow/events/publisher/: __init__.py  domain_event_publisher.py
message_flow/events/subscriber/: __init__.py  domain_event_dispatcher.py  domain_event_envelope.py  domain_event_handler.py  domain_event_handlers.py  (+1 more)
tests/factories/: __init__.py  command.py  event.py  message.py
tests/fakes/: __init__.py  message_consumer.py  message_producer.py  saga_instance_repository.py
tests/unit/: conftest.py  test_command_dispather.py  test_command_handlers.py  test_commands_common.py  test_domain_event_handlers.py  test_event_dispather.py  test_events_common.py  test_events_publisher.py
(+75 files in other folders)
