[tool.poetry]
name = "message-flow"
version = "1.3.0"
description = "Adapters for pub/sub messaging architecture"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
mypy = "~0.800"
flake8 = "~3.8.4"
isort = "~5.6.4"
black = "~23.3.0"
pytest = "^6.2.5"
factory-boy = "^3.2.1"
pytest-factoryboy = "^2.1.0"
pytest-faker = "^2.0.0"
Faker = "^12.0.0"
click = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
